Ndl: fixed a minor overflow-x bug.

--- a/web/interface/themes/ndl/css/768tablet.css
+++ b/web/interface/themes/ndl/css/768tablet.css
@@ -1,10 +1,12 @@
+@media only screen and (max-device-width: 1020px) {
+    body,html {
+        overflow-x:hidden;
+    } 
+}
+
 @media only screen and (max-width: 1020px) {
     
     /* General */
-    body,html {
-        overflow-x:hidden;
-    }
-    
     .backgroundContainer {
         width:100%;
         margin:0 auto;
